[package]
edition = "2021"
name = "merde-time"
version = "4.0.0"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Wrapper date-time types for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["merde", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
merde-core = { version = "4.0.0", path = "../merde-core", optional = true }
merde-json = { version = "4.0.0", path = "../merde-json", optional = true }
time = "0.3.36"

[dev-dependencies]
time = { version = "0.3.36", features = ["macros"] }

[features]
default = []
full = ["merde", "json", "serialize", "deserialize"]
merde = ["dep:merde-core"]
json = ["merde", "dep:merde-json"]
serialize = ["time/formatting"]
deserialize = ["time/parsing"]
