[package]
edition = "2021"
name = "merde_core"
version = "7.0.0"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Base types for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["merde", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]
rust-version = "1.75"

[dependencies]
compact_str = { version = "0.8.0", optional = true }
compact_bytes = { version = "0.1.3", optional = true }
ordered-float = "4.3.0"
rubicon = "3.4.9"
rusqlite = { version = "0.32.1", optional = true }
serde = { version = "1", optional = true }

[features]
default = []
full = [
    # (1 per line)
    "compact_str",
    "compact_bytes",
    "serde",
    "rusqlite",
]
compact_str = ["dep:compact_str"]
compact_bytes = ["dep:compact_bytes"]
serde = ["dep:serde", "compact_str/serde"]
rusqlite = ["dep:rusqlite"]

[dev-dependencies]
trybuild = "1.0.101"
