[package]
edition = "2021"
name = "merde_core"
version = "10.0.6"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Base types for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["merde", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]
rust-version = "1.83"

[dependencies]
compact_str = { version = "0.8.0" }
compact_bytes = { version = "0.1.3" }
ordered-float = "5.0.0"
rusqlite = { version = "0.35.0", optional = true }
serde = { version = "1", optional = true }
time = { version = "0.3.36", optional = true, features = [
    "parsing",
    "formatting",
] }
camino = { version = "1", optional = true }

[features]
default = []
full = [
    # (1 per line)
    "serde",
    "rusqlite",
    "time",
]
# Add `serde` implementations for merde_core types
serde = ["dep:serde", "compact_str/serde"]
# Add `merde` implementations for types of the `time` crate
time = ["dep:time"]
# Add `merde` implementations for types of the `rusqlite` crate
rusqlite = ["dep:rusqlite"]
camino = ["dep:camino"]

[dev-dependencies]
insta = "1.40.0"
trybuild = "1.0.101"
time = { version = "0.3.36", features = ["macros"] }
