[package]
name = "merde_json"
version = "3.0.1"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "JSON serialization and deserialization for merde, via jiter"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["json", "serialization", "deserialization", "jiter"]
categories = ["encoding", "parser-implementations"]

[dependencies]
jiter = "0.5.0"
merde_core = { version = "3.0.1", path = "../merde_core" }

[features]
default = []
full = []
