[package]
name = "merde_json"
version = "5.0.0"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "JSON serialization and deserialization for merde, via jiter"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["json", "serialization", "deserialization", "jiter"]
categories = ["encoding", "parser-implementations"]

[dependencies]
lexical-parse-float = { version = "0.8.5", features = ["format"] }
merde_core = { version = "5.0.0", path = "../merde_core" }
num-bigint = { version = "0.4.6", optional = true }
num-traits = { version = "0.2.19", optional = true }

[features]
default = []
full = ["num-bigint"]
num-bigint = ["dep:num-bigint", "dep:num-traits"]
