[package]
name = "merde_json"
version = "10.0.6"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "JSON serialization and deserialization for merde, via jiter"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["json", "serialization", "deserialization", "jiter"]
categories = ["encoding", "parser-implementations"]

[dependencies]
itoa = "1.0.11"
lexical-parse-float = { version = "0.8.5", features = ["format"] }
merde_core = { version = "10.0.6", path = "../merde_core" }
ryu = "1.0.18"
tokio = { version = "1", optional = true, features = ["io-util"] }

[features]
default = []
full = []

[dev-dependencies]
merde_loggingserializer = { path = "../merde_loggingserializer" }

