[package]
name = "merde_json_types"
version = "2.0.0"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Provide types that can be (de)serialized with `merde_json` if you enable the `merde_json` feature of this crate, but which are otherwise light"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde_json"
keywords = ["json", "serialization", "deserialization", "jiter"]
categories = ["encoding", "parser-implementations"]

[dependencies]
merde_json = { version = "2.1.0", path = "../merde_json", optional = true }
time = { version = "0.3.36", optional = true }

[dev-dependencies]
merde_json = { version = "2.1.0", path = "../merde_json" }
time = { version = "0.3.36", features = ["macros"] }

[features]
default = []
merde_json = ["dep:merde_json"]
full = ["merde_json", "time-serialize", "time-deserialize"]
time-types = ["dep:time"]
time-serialize = ["time-types", "time/formatting"]
time-deserialize = ["time-types", "time/parsing"]
