[package]
edition = "2021"
name = "merde_time"
version = "3.0.0"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Wrapper date-time types for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["merde", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
merde_core = { version = "3.0.0", path = "../merde_core" }
merde_json = { version = "3.0.0", path = "../merde_json", optional = true }
time = "*"

[features]
default = []
full = ["merde_json", "serialize", "deserialize"]
merde_json = ["dep:merde_json"]
serialize = ["time/formatting"]
deserialize = ["time/parsing"]
