[package]
edition = "2021"
name = "merde_time"
version = "4.0.4"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Wrapper date-time types for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["merde", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
merde_core = { version = "5.0.0", path = "../merde_core", optional = true }
merde_json = { version = "5.0.0", path = "../merde_json", optional = true }
time = "0.3.36"

[dev-dependencies]
time = { version = "0.3.36", features = ["macros"] }

[features]
default = []
full = ["merde", "json", "serialize", "deserialize"]
merde = ["dep:merde_core"]
json = ["merde", "dep:merde_json", "serialize"]
serialize = ["time/formatting"]
deserialize = ["merde", "time/parsing"]
