[package]
edition = "2021"
name = "merde_time"
version = "8.0.3"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Wrapper date-time types for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["merde", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
merde_core = { version = "8.1.1", path = "../merde_core", optional = true }
merde_json = { version = "8.0.2", path = "../merde_json", optional = true }
time = "0.3.36"

[dev-dependencies]
merde_json = { path = "../merde_json" }
time = { version = "0.3.36", features = ["macros"] }

[features]
default = []
full = ["merde", "serialize", "deserialize"]
merde = ["dep:merde_core"]
json = []
serialize = ["time/formatting"]
deserialize = ["merde", "time/parsing"]
