[package]
name = "merde_yaml"
version = "10.0.2"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "YAML deserialization for merde"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/merde"
keywords = ["yaml", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
merde_core = { version = "10.0.2", path = "../merde_core" }
yaml-rust2 = { version = "0.8.1", default-features = false }

