[package]
name = "zerodeps-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
merde = { version = "4.0.0", path = "../merde", default-features = false }
merde-core = { version = "4.0.0", path = "../merde-core", default-features = false }

[features]
default = []
merde = ["merde/core", "merde-core/compact_str"]
