[package]
name = "zerodeps-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
merde = { version = "4.0.0", path = "../merde", default-features = false }
merdelcore = { version = "4.0.0", path = "../merde_core", default-features = false }

[features]
default = []
merde = ["merde/core", "merde_core/compact_str"]
